--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.0",
     "tailwindcss": "3.3.1",
