--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notes-app",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.0",
     "tailwindcss": "3.3.1",
