--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "firebase-admin": "^11.6.0",
     "highlight.js": "^11.7.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
