--- a/package.json
+++ b/package.json
@@ -5,21 +5,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
+    "dev-server": "next dev -H 192.168.1.198",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "firebase-admin": "^11.6.0",
     "highlight.js": "^11.7.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -30,7 +27,6 @@
     "redux": "^4.2.1",
     "sass": "^1.62.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -39,6 +35,20 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.6",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
+    "postcss": "8.4.21",
+    "autoprefixer": "10.4.14",
+    "typescript": "4.5.2"
   }
 }
