--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev-server": "next dev -H 192.168.1.198",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -30,13 +32,14 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "18.15.11",
-    "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "autoprefixer": "10.4.14",
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.2.4",
@@ -48,7 +51,13 @@
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "postcss": "8.4.21",
-    "autoprefixer": "10.4.14",
-    "typescript": "4.5.2"
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/react": "18.0.28",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "typescript": "4.9.5"
   }
 }
