--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "pre-commit:test": "jest",
+    "test:ci": "jest --ci",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -55,10 +57,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-testing-library": "^5.10.3",
-    "husky": "^8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "postcss": "8.4.21",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "husky": "^8.0.0"
   }
 }
