--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "firebase-admin": "^11.6.0",
     "highlight.js": "^11.7.0",
     "next": "13.3.0",
@@ -57,10 +58,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-testing-library": "^5.10.3",
+    "husky": "^8.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "postcss": "8.4.21",
-    "typescript": "4.9.5",
-    "husky": "^8.0.0"
+    "typescript": "4.9.5"
   }
 }
