--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.2.1",
     "sass": "^1.62.0",
     "tailwindcss": "3.3.1",
+    "underscore": "^1.13.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -45,8 +46,10 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/testing-library__jest-dom": "5.14.5",
+    "@types/underscore": "^1.11.4",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "10.4.14",
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -57,6 +60,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.10.3",
     "husky": "^8.0.0",
     "jest": "29.5.0",
