--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "date-fns": "^2.29.3",
     "firebase-admin": "^11.6.0",
     "highlight.js": "^11.7.0",
-    "next": "13.3.0",
+    "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
