--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
     "**/*.tsx",
     "jest.config.js",
     "jest.setup.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+   
   ],
   "exclude": [
     "node_modules"
