--- a/package.json
+++ b/package.json
@@ -16,56 +16,57 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.3.5",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
-    "date-fns": "^2.29.3",
-    "firebase-admin": "^11.6.0",
-    "highlight.js": "^11.7.0",
-    "next": "^13.4.2",
+    "date-fns": "^2.30.0",
+    "firebase-admin": "^11.10.1",
+    "highlight.js": "^11.8.0",
+    "next": "^13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.11.0",
     "react-markdown": "^8.0.7",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.2",
+    "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
-    "react-toastify": "^9.1.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "sass": "^1.62.0",
-    "tailwindcss": "3.3.1",
+    "sass": "^1.68.0",
+    "tailwindcss": "3.3.3",
     "underscore": "^1.13.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/jest": "^29.5.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/react-icons": "^3.0.0",
-    "@types/react-syntax-highlighter": "^15.5.6",
-    "@types/testing-library__jest-dom": "5.14.5",
-    "@types/underscore": "^1.11.4",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.59.1",
-    "autoprefixer": "10.4.14",
-    "eslint": "^8.0.1",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/underscore": "^1.11.9",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "autoprefixer": "10.4.16",
+    "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.2.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-config-next": "13.5.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.10.3",
+    "eslint-plugin-testing-library": "^6.0.1",
     "husky": "^8.0.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
-    "postcss": "8.4.21",
-    "typescript": "4.9.5"
+    "jest": "29.7.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "29.7.0",
+    "postcss": "8.4.30",
+    "typescript": "5.2.2"
   }
 }
